# mocap

./: .gitignore  README.md  fixbundle.sh  interpolateDisc.m  test.py  videoplayer
OS-MoCap/: CMakeLists.txt  OS-MoCap.pro  cmake_install.cmake
OS-MoCap/lib/msvc/vlcqt/lib/: VLCQtCore.lib  VLCQtCored.lib  VLCQtQml.lib  VLCQtQmld.lib  VLCQtWidgets.lib  VLCQtWidgetsd.lib
OS-MoCap/lib/msvc/vlcqt/lib/cmake/VLCQtCore/: VLCQtCoreTargets.cmake
OS-MoCap/lib/msvc/vlcqt/lib/cmake/VLCQtQml/: VLCQtQmlTargets.cmake
OS-MoCap/lib/msvc/vlcqt/lib/cmake/VLCQtWidgets/: VLCQtWidgetsTargets.cmake
OS-MoCap/osx/: CMakeLists.txt
OS-MoCap/src/: GraphicsVlcItem.cpp  GraphicsVlcItem.h  displayplot.cpp  help.cpp  help.ui  helpmenu.cpp  helpmenu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mocap.rc  optionsmenu.cpp  optionsmenu.h  optionsmenu.ui  player.cpp  playercontrols.h  plotwindow.cpp  plotwindow.ui  pointstruct.cpp  pointstruct.h  pointtocsv.h  pointtracker.cpp  pointtracker.h  pointtracker.ui  qcustomplot.h  src.pro  videowidget.cpp  videowidget.h
OS-MoCap/windows/: CMakeLists.txt  DIDNTWORK.html
PointTrackingList/: PointTrackingList.pro  PointTrackingList.pro.user.95f26e4  PointTrackingList.pro.user.dc36aeb  main.cpp  pointtracker.cpp  pointtracker.h
icon/: icon.ai  icon.icns
icon/old/: mocap.icns
tools/OSX/: fixbundle.sh
vidplayer/: GraphicsVlcItem.cpp  GraphicsVlcItem.h  Makefile  borderlayout.cpp  displayplot.cpp  displayplot.h  helpmenu.cpp  helpmenu.h  histogramwidget.cpp  histogramwidget.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  moc_histogramwidget.cpp  moc_mainwindow.cpp  moc_player.cpp  moc_playercontrols.cpp  moc_playlistmodel.cpp  moc_plotwindow.cpp  moc_videowidget.cpp  player  player.cpp  player.h  player.pro  playercontrols.cpp  playercontrols.h  playlistmodel.cpp  playlistmodel.h  plotwindow.cpp  plotwindow.h  plotwindow.ui  pointstruct.cpp  pointstruct.h  pointtocsv.cpp  pointtracker.cpp  pointtracker.h  pointtracker.ui  ui_mainwindow.h  (+4 more)
vidplayer/html/: help.html
